@@ -82,7 +82,8 @@ dependencies of the above files are only observed for batch build.
 * Highlighting of entity def/ref positions wrt. cursor.
 
 * Refined folding mode "isabelle" based on Isar syntax: 'next' and 'qed'
-are treated as delimiters for fold structure.
+are treated as delimiters for fold structure; 'begin' and 'end'
+structure of theory specifications is treated as well.
 
 * Syntactic indentation according to Isabelle outer syntax. Action
 "indent-lines" (shortcut C+i) indents the current line according to
